Fixed apps mobile display basic alignment:
Fixed the header and its basic styling and components.

--- a/styles/_presets.scss
+++ b/styles/_presets.scss
@@ -1,24 +1,16 @@
 * {
-    border: 1px solid red !important;
-    box-sizing: border-box;
+  border: 1px solid red !important;
+  box-sizing: border-box;
 }
-
 body {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    background: url(/images/pattern-bg.png)no-repeat;
-    z-index: -1;
-    cursor: pointer;
+  margin: 0;
+  padding: 0;
+  height: 12rem;
+  background: url(/images/pattern-bg.png) center no-repeat;
+  background-size: cover;
+  font-family: "Rubik", sans-serif;
+  cursor: pointer;
 }
-/*body::after {
-    content: "";
-    background: url(/images/icon-location.svg)no-repeat;
-    position: absolute;
-    top: 20%;
-    bottom: 60%;
-    left: 0;
-    right: 0;
-    z-index: 1;
 
-}*/
+
+
